@@ -1,3 +1,9 @@
+2011-01-29  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Fix crash.
+	* valops.c (compare_parameters): Verify TYPE_NFIELDS before
+	touching TYPE_FIELD_ARTIFICIAL.
+
 2011-01-28  Richard Earnshaw  <rearnsha@arm.com>
 
 	* MAINTAINERS: Move myself from Responsible Maintainers to Authorized
